k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: github-api-server
  namespace: skygear-lambda-check
spec:
  rules:
  - host: skygear-lambda-check.pandawork.com
    http:
      paths:
      - path: /
        backend:
          serviceName: github-api-server
          servicePort: 80
